--- a/me.html
+++ b/me.html
@@ -2,99 +2,201 @@
 <title>About Me - Hao Yuan (Frankie)</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="assets/css/main.css"><noscript>
-<link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+<link rel="stylesheet" href="assets/css/main.css">
+<noscript>
+  <link rel="stylesheet" href="assets/css/noscript.css">
+</noscript>
 <meta name="keywords" content="Hao Yuan,Frankie Yuan, about me, about frankie">
 <meta name="description" content="About Frankie: His attitude and experience.">
+
 <body class="is-preload">
-<!-- Wrapper -->
-<div id="wrapper"><!-- Header -->
-<!-- Note: The "styleN" class below should match that of the banner element. -->
-<header id="header" class="alt style2"><a href="index.html" class="logo"><strong>Frankie</strong> <span>Hao Yuan</span></a>
-<nav><a href="#menu"></a></nav></header><!-- Menu -->
-<nav id="menu">
-<ul class="links">
-<li><a href="index.html">Home</a>
-<li><a href="tensorflow.html">Tensorflow Project</a>
-<li><a href="peaband.html">Conceptual Wearable Device</a>
-<li><a href="vpn/index.html">Vitrual Private Network</a>
-<li><a href="hyphoto.html">Amateur Photography</a>
-<li><a href="me.html">About Me</a></ul></nav><!-- Banner -->
-<!-- Note: The "styleN" class below should match that of the header element. -->
-<section id="banner" class="style7">
-<div class="inner"><span class="image"><img src="images/me.jpg" alt="At Macau"></span>
-<header class="major">
-<h1>About Me</h1></header>
-<div class="content">
-<p>I am ...<br>
-Geek | Photogrpher | Life Explorer</div></div></section><!-- Main -->
-<div id="main"><!-- One -->
-<section id="one">
-<div class="inner">
-<header class="major">
-<h2>My Motto and Pursuance</h2></header>
-<h3>MAKE IMPROVEMENTS, NOT EXCUSES.<br>
-SEEK RESPECT, NOT ATTENTION.</h3></div></section><!-- Two -->
-<section id="two" class="spotlights">
-<section><a class="image"><img src="images/me-geek.jpg" alt="" data-position="center center"></a>
-<div class="content inner">
-<header class="major">
-<h3>I am a GEEK</h3></header>
-<p>I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and environment, I have unlimited enthusiasm for technology, especially for computer science.</br>
-I graduated from Beijing Bayi School International Department, a place full of creativity and energetics. Seizing every opporturnity to step closer to my dream, in high school, a tech club reviewing new digital products was founded by me; I also led a team to participate Diamond Challenge, a global business concept competition held by Uniersity of Delaware.</br>
-Now, I am studying in Pre-Enginering at University of Illinois at Urbana-Champaign. There are much more chances to meet with world-leading technology. Aiming to be a sucessful product manager in Artifical Intelligence field, I am highly motivated to learn from relative academic resources and participate campus actvities. </br>
-I had an internship as software testing engineer at HXT Semiconductor Technology in Summer 2018. </br>
-Please visit Linkedin Page to see my professional experience and resume.</br>
-<ul class="actions">
-<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" class="button" target="_blank">Linkedin</a>
-<a href="index.html#one" class="button">Projects</a></ul></div></section>
-<section><a class="image"><img src="images/me-photo.JPG" alt="" data-position="top center"></a>
-<div class="content inner">
-<header class="major">
-<h3>I take PHOTOS</h3></header>
-<p>I am also a big fan of photography, a way to capture valuable moments. </br>
-  Landscape, City View, and Portrait are three themes that I took most.</br>
-Device List:</br>
-[Sony α7r] with [Zeiss 24-70mm F4] and [Zeiss 55mm F1.8]; [Sony RX100M3]; [iPhone7Plus]
-<ul class="actions">
-<li><a href="hyphoto.html" class="button">Gallery</a></ul></div></section>
-<section><a class="image"><img src="images/me-life.JPG" alt="" data-position="25% 25%"></a>
-<div class="content inner">
-<header class="major">
-<h3>I love this WORLD</h3></header>
-  <p>"Life is like not to bold adventure, then nothing."</br>
-  Yes, I am challenging myself all the time. Besides Computer Science, there are much fun roles to be for this bored life.</br>
-  In high school, I was the stage manager of "Our Town" for Bulc Amard (the reverse of Drama Club); I was Art Editor and Design Manager for Survive Magazine; I was English teacher at Immigrant Wenhua School...</br>
-  At University, even though I know nothing about art, I took Painting and World Music courses...</br>
-  What's NEXT? Idk, but I am ready for the NEXT.
-<ul class="actions">
-<li><a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
-<li><a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram"><span class="label">Weibo</span></a>
-<li><a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo"><span class="label">LinkedIn</span></a></ul></div></section></section><!-- Two -->
-<section id="two">
-<div class="inner">
-<header class="major">
-<h3>CONTACT</h3></header>
-<h4>Feel free to reach out to me by<br>
-Email: frankie.yuan[at]yahoo.com<br>
-Phone: (217)819-2998<br>
-Wechat: 15711086806</h4>
-<ul class="actions"></ul></div></section></div><!-- Footer -->
-<footer id="footer">
-<div class="inner">
-<ul class="icons">
-<li><a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
-<li><a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram"><span class="label">Weibo</span></a>
-<li><a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo"><span class="label">LinkedIn</span></a>
-<li><a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a>
-<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></ul>
-<ul class="copyright">
-<li>© Frankie Hao Yuan
-<li>Design: HTML5 UP</ul></div></footer></div><!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script> 
-<script src="assets/js/jquery.scrolly.min.js"></script> 
-<script src="assets/js/jquery.scrollex.min.js"></script> 
-<script src="assets/js/browser.min.js"></script> 
-<script src="assets/js/breakpoints.min.js"></script> 
-<script src="assets/js/util.js"></script> 
-<script src="assets/js/main.js"></script>
+  <!-- Wrapper -->
+  <div id="wrapper">
+    <!-- Header -->
+    <!-- Note: The "styleN" class below should match that of the banner element. -->
+    <header id="header" class="alt style2">
+      <a href="index.html" class="logo">
+        <strong>Frankie</strong>
+        <span>Hao Yuan</span>
+      </a>
+      <nav>
+        <a href="#menu"></a>
+      </nav>
+    </header>
+    <!-- Menu -->
+    <nav id="menu">
+      <ul class="links">
+        <li>
+          <a href="index.html">Home</a>
+          <li>
+            <a href="tensorflow.html">Tensorflow Project</a>
+            <li>
+              <a href="peaband.html">Conceptual Wearable Device</a>
+              <li>
+                <a href="vpn/index.html">Vitrual Private Network</a>
+                <li>
+                  <a href="hyphoto.html">Amateur Photography</a>
+                  <li>
+                    <a href="me.html">About Me</a>
+      </ul>
+    </nav>
+    <!-- Banner -->
+    <!-- Note: The "styleN" class below should match that of the header element. -->
+    <section id="banner" class="style7">
+      <div class="inner">
+        <span class="image">
+          <img src="images/me.jpg" alt="At Macau">
+        </span>
+        <header class="major">
+          <h1>About Me</h1>
+        </header>
+        <div class="content">
+          <p>I am ...
+            <br> Geek | Photogrpher | Life Explorer</div>
+      </div>
+    </section>
+    <!-- Main -->
+    <div id="main">
+      <!-- One -->
+      <section id="one">
+        <div class="inner">
+          <header class="major">
+            <h2>My Motto and Pursuance</h2>
+          </header>
+          <h3>MAKE IMPROVEMENTS, NOT EXCUSES.
+            <br> SEEK RESPECT, NOT ATTENTION.</h3>
+        </div>
+      </section>
+      <!-- Two -->
+      <section id="two" class="spotlights">
+        <section>
+          <a class="image">
+            <img src="images/me-geek.jpg" alt="" data-position="center center">
+          </a>
+          <div class="content inner">
+            <header class="major">
+              <h3>I am a GEEK</h3>
+            </header>
+            <p>I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and environment, I have
+              unlimited enthusiasm for technology, especially for computer science.</br>
+              I graduated from Beijing Bayi School International Department, a place full of creativity and energetics. Seizing every opporturnity
+              to step closer to my dream, in high school, a tech club reviewing new digital products was founded by me; I
+              also led a team to participate Diamond Challenge, a global business concept competition held by Uniersity of
+              Delaware.
+              </br>
+              Now, I am studying in Pre-Enginering at University of Illinois at Urbana-Champaign. There are much more chances to meet with
+              world-leading technology. Aiming to be a sucessful product manager in Artifical Intelligence field, I am highly
+              motivated to learn from relative academic resources and be involved in various campus actvities. </br>
+              I developed a messaging robot to response questions from incoming students automaticaly. With Special Interest Group for
+              Artificial Intelligence in Association for Computing Machinery, I learnt lots of AI concepts and was planning
+              to start a road sign recognition project. In addition, I had an internship as software testing engineer at
+              HXT Semiconductor Technology in Summer 2018. </br>
+              Please visit Linkedin Page to see my professional experience and resume.</br>
+              <ul class="actions">
+                <li>
+                  <a href="https://www.linkedin.com/in/frankie-hao-yuan/" class="button" target="_blank">Linkedin</a>
+                  <a href="index.html#one" class="button">Projects</a>
+              </ul>
+          </div>
+        </section>
+        <section>
+          <a class="image">
+            <img src="images/me-photo.JPG" alt="" data-position="top center">
+          </a>
+          <div class="content inner">
+            <header class="major">
+              <h3>I take PHOTOS</h3>
+            </header>
+            <p>I am also a big fan of photography, a way to capture valuable life moments. Landscape, City View, and Portrait
+              are three themes that I took most.</br>
+              My Devices: [Sony α7r] with Zeiss 24-70mm F4 and Zeiss 55mm F1.8; [Sony RX100M3]; [iPhone7Plus]
+              <ul class="actions">
+                <li>
+                  <a href="hyphoto.html" class="button">Gallery</a>
+              </ul>
+          </div>
+        </section>
+        <section>
+          <a class="image">
+            <img src="images/me-life.JPG" alt="" data-position="25% 25%">
+          </a>
+          <div class="content inner">
+            <header class="major">
+              <h3>I love this WORLD</h3>
+            </header>
+            <p>"Life is like not to bold adventure, then nothing."</br>
+              Yes, I am challenging myself all the time. Besides Computer Science, there are much more fun roles to be for this bored life.</br>
+              In high school, I was the stage manager of "Our Town" for Bulc Amard Drama Club; I was Art Editor and Design
+              Manager for Survive Magazine; I was English teacher at Immigrant Wenhua School...</br>
+              At University, even though I know nothing about art, I took Painting and World Music courses...</br>
+              What's NEXT? Idk, but I am ready for the NEXT.
+              <ul class="actions">
+                <li>
+                  <a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook">
+                    <span class="label">Facebook</span>
+                  </a>
+                  <li>
+                    <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
+                      <span class="label">Weibo</span>
+                    </a>
+                    <li>
+                      <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
+                        <span class="label">LinkedIn</span>
+                      </a>
+              </ul>
+          </div>
+        </section>
+      </section>
+      <!-- Two -->
+      <section id="two">
+        <div class="inner">
+          <header class="major">
+            <h3>CONTACT</h3>
+          </header>
+          <h4>Feel free to reach out to me by
+            <br> Email: frankie.yuan[at]yahoo.com
+            <br> Phone: (217)819-2998
+            <br> Wechat: 15711086806</h4>
+          <ul class="actions"></ul>
+        </div>
+      </section>
+    </div>
+    <!-- Footer -->
+    <footer id="footer">
+      <div class="inner">
+        <ul class="icons">
+          <li>
+            <a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook">
+              <span class="label">Facebook</span>
+            </a>
+            <li>
+              <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
+                <span class="label">Weibo</span>
+              </a>
+              <li>
+                <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
+                  <span class="label">LinkedIn</span>
+                </a>
+                <li>
+                  <a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github">
+                    <span class="label">GitHub</span>
+                  </a>
+                  <li>
+                    <a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin">
+                      <span class="label">LinkedIn</span>
+                    </a>
+        </ul>
+        <ul class="copyright">
+          <li>© Frankie Hao Yuan
+            <li>Design: HTML5 UP</ul>
+      </div>
+    </footer>
+  </div>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.scrolly.min.js"></script>
+  <script src="assets/js/jquery.scrollex.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
