--- a/peaband.html
+++ b/peaband.html
@@ -2,59 +2,156 @@
 <title>Peaband - the Next Generation Wearable Device</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="assets/css/main.css"><noscript>
-<link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+<link rel="stylesheet" href="assets/css/main.css">
+<noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css">
+</noscript>
 <meta name="keywords" content="Peaband, wearable device, smart band">
 <meta name="description" content="PeaBand is a conceptual wearable product created by four high school students for Diamond Challenge, a business concept competition held by University of Delaware.">
+
 <body class="is-preload">
-<!-- Wrapper -->
-<div id="wrapper"><!-- Header -->
-<header id="header" class="alt"><a href="index.html" class="logo"><strong>Frankie</strong> <span>Hao Yuan</span></a>
-<nav><a href="#menu"></a></nav></header><!-- Menu -->
-<nav id="menu">
-<ul class="links">
-<li><a href="index.html">Home</a>
-<li><a href="tensorflow.html">Tensorflow Project</a>
-<li><a href="peaband.html">Conceptual Wearable Device</a>
-<li><a href="vpn/index.html">Vitrual Private Network</a>
-<li><a href="hyphoto.html">Amateur Photography</a>
-<li><a href="me.html">About Me</a></ul></nav><!-- Main -->
-<div id="main" class="alt"><!-- One -->
-<section id="one">
-<div class="inner">
-<header class="major">
-<h1>PeaBand</h1>
-</header><span class="image main">
-<h2>Introducing the Next Generation Wearable Device</h2>
-<img src="peaband/images/peaband.jpg" alt=""></span>
-<p>Peaband is a conceptual wearable device product created by Fred JingYu Zheng, Wendy WanQin Wen, Susan Yi Cao, and Frankie Hao Yuan in 2016. They are high school students at Beijing Bayi School International Department(BYID), and this product is for Diamond Challenge, a business concept competition held by University of Delaware. Helped by their advisor, Martin Thompson, these group of high school students with enthusiasm were one of the three teams advanced into the semi-final via internet pitch. And they were invited to Delaware to participate the The Youth Entrepreneurship Summit (YES!).
-<p>If you have any thought about this product, please contact me with email - frankie.yuan[at]yahoo.com<a href="http://diamondchallenge.org/" target="_blank"><span class="image main"><img src="peaband/images/diamond.jpg" alt=""></span></a>
-<p>Steve Jobs said "I think if you do something and it turns out pretty good, then you should go do something else wonderful, not dwell on it for too long. Just figure out what's next." So we asked ourselves, what is next? What is New EXciting Technology?
-<p>Technology today, in the form of computers and mobile phones bring us so many conveniences. We can get whatever information whenever we want it, ... just not necessarily WHERE we want it. Where is the easiest and the most convenient place for a person to look for and access information?
-<h2>Apperance</h2><span class="image main"><img src="peaband/images/1.jpg" alt=""></span>
-<p>For the appearance, our design strategy is to be concise and functional. The Pea Module has a tritium self-luminous light to make the band dramatically beautiful. The Pea module has a curved AMOLED Screen with two smart ports that can be USB of two sizes or other proprietary ports licensed from other manufacturers. And we use smooth aluminum alloy to make it beautiful and comfortable.
-<h2>The Basics</h2><span class="image main"><img src="peaband/images/2.jpg" alt=""></span>
-<p>As for basic functions, Pea Band will notify you when a phone call or new message arrives. You can also ask your phone's digital assistant through the Pea module to navigate for you, and the navigation information will be updated on the band.
-<h2>Health Care</h2><span class="image main"><img src="peaband/images/3.jpg" alt=""></span>
-<p>Pea Band does more for our health. It will collect all your exercise data and transmit to your smart phone. The application on the phone will give you a suitable plan for exercising, and this plan will adjust automatically according to your true performance. Do you always forget to put your phone under your pillow at night to monitor your sleep habits? Worry no more! The Pea Band can detect your movements all night long. After analyzing, the Pea Band will wake you at the best time in your sleeping cycle.
-<h2>The Revolution</h2><span class="image main"><img src="peaband/images/4.JPG" alt=""></span>
-<p>Besides the aforementioned expected functions, Pea Band has some really revolutionary features. In order to prevent loss of flash drives, many people like our team advisor, attach them to their key chain. No more! the Pea Module doubles as a flash drive. The band is multifunctional as well doubling as a charge cable. You don't need to worry about finding the charging cable ever again.
-</br></br><a href="index.html" class="button">View More Projects</a></div></section></div><!-- Footer -->
-<footer id="footer">
-<div class="inner">
-<ul class="icons">
-<li><a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
-<li><a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram"><span class="label">Weibo</span></a>
-<li><a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo"><span class="label">LinkedIn</span></a>
-<li><a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a>
-<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></ul>
-<ul class="copyright">
-<li>© Frankie Hao Yuan
-<li>Design: HTML5 UP</ul></div></footer></div><!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script> 
-<script src="assets/js/jquery.scrolly.min.js"></script> 
-<script src="assets/js/jquery.scrollex.min.js"></script> 
-<script src="assets/js/browser.min.js"></script> 
-<script src="assets/js/breakpoints.min.js"></script> 
-<script src="assets/js/util.js"></script> 
-<script src="assets/js/main.js"></script>
+    <!-- Wrapper -->
+    <div id="wrapper">
+        <!-- Header -->
+        <header id="header" class="alt">
+            <a href="index.html" class="logo">
+                <strong>Frankie</strong>
+                <span>Hao Yuan</span>
+            </a>
+            <nav>
+                <a href="#menu"></a>
+            </nav>
+        </header>
+        <!-- Menu -->
+        <nav id="menu">
+            <ul class="links">
+                <li>
+                    <a href="index.html">Home</a>
+                    <li>
+                        <a href="tensorflow.html">Tensorflow Project</a>
+                        <li>
+                            <a href="peaband.html">Conceptual Wearable Device</a>
+                            <li>
+                                <a href="vpn/index.html">Vitrual Private Network</a>
+                                <li>
+                                    <a href="hyphoto.html">Amateur Photography</a>
+                                    <li>
+                                        <a href="me.html">About Me</a>
+            </ul>
+        </nav>
+        <!-- Main -->
+        <div id="main" class="alt">
+            <!-- One -->
+            <section id="one">
+                <div class="inner">
+                    <header class="major">
+                        <h1>PeaBand</h1>
+                    </header>
+                    <span class="image main">
+                        <h2>Introducing the Next Generation Wearable Device</h2>
+                        <img src="peaband/images/peaband.jpg" alt="">
+                    </span>
+                    <p>Peaband is a conceptual wearable device product created by Fred JingYu Zheng, Wendy WanQin Wen, Susan
+                        Yi Cao, and Frankie Hao Yuan in 2016. They are high school students at Beijing Bayi School International
+                        Department(BYID), and this product is for Diamond Challenge, a business concept competition held
+                        by University of Delaware. Helped by their advisor, Martin Thompson, these group of high school students
+                        with enthusiasm were one of the three teams advanced into the semi-final via internet pitch. And
+                        they were invited to Delaware to participate the The Youth Entrepreneurship Summit (YES!).
+                        <p>If you have any thought about this product, please contact me with email - frankie.yuan[at]yahoo.com
+                            <a
+                                href="http://diamondchallenge.org/" target="_blank">
+                                <span class="image main">
+                                    <img src="peaband/images/diamond.jpg" alt="">
+                                </span>
+                                </a>
+                                <p>Steve Jobs said "I think if you do something and it turns out pretty good, then you should
+                                    go do something else wonderful, not dwell on it for too long. Just figure out what's
+                                    next." So we asked ourselves, what is next? What is New EXciting Technology?
+                                    <p>Technology today, in the form of computers and mobile phones bring us so many conveniences.
+                                        We can get whatever information whenever we want it, ... just not necessarily WHERE
+                                        we want it. Where is the easiest and the most convenient place for a person to look
+                                        for and access information?
+                                        <h2>Apperance</h2>
+                                        <span class="image main">
+                                            <img src="peaband/images/1.jpg" alt="">
+                                        </span>
+                                        <p>For the appearance, our design strategy is to be concise and functional. The Pea
+                                            Module has a tritium self-luminous light to make the band dramatically beautiful.
+                                            The Pea module has a curved AMOLED Screen with two smart ports that can be USB
+                                            of two sizes or other proprietary ports licensed from other manufacturers. And
+                                            we use smooth aluminum alloy to make it beautiful and comfortable.
+                                            <h2>The Basics</h2>
+                                            <span class="image main">
+                                                <img src="peaband/images/2.jpg" alt="">
+                                            </span>
+                                            <p>As for basic functions, Pea Band will notify you when a phone call or new message
+                                                arrives. You can also ask your phone's digital assistant through the Pea
+                                                module to navigate for you, and the navigation information will be updated
+                                                on the band.
+                                                <h2>Health Care</h2>
+                                                <span class="image main">
+                                                    <img src="peaband/images/3.jpg" alt="">
+                                                </span>
+                                                <p>Pea Band does more for our health. It will collect all your exercise data
+                                                    and transmit to your smart phone. The application on the phone will give
+                                                    you a suitable plan for exercising, and this plan will adjust automatically
+                                                    according to your true performance. Do you always forget to put your
+                                                    phone under your pillow at night to monitor your sleep habits? Worry
+                                                    no more! The Pea Band can detect your movements all night long. After
+                                                    analyzing, the Pea Band will wake you at the best time in your sleeping
+                                                    cycle.
+                                                    <h2>The Revolution</h2>
+                                                    <span class="image main">
+                                                        <img src="peaband/images/4.JPG" alt="">
+                                                    </span>
+                                                    <p>Besides the aforementioned expected functions, Pea Band has some really
+                                                        revolutionary features. In order to prevent loss of flash drives,
+                                                        many people like our team advisor, attach them to their key chain.
+                                                        No more! the Pea Module doubles as a flash drive. The band is multifunctional
+                                                        as well doubling as a charge cable. You don't need to worry about
+                                                        finding the charging cable ever again.
+                                                        </br>
+                                                        </br>
+                                                        <a href="index.html" class="button">View More Projects</a>
+                </div>
+            </section>
+        </div>
+        <!-- Footer -->
+        <footer id="footer">
+            <div class="inner">
+                <ul class="icons">
+                    <li>
+                        <a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook">
+                            <span class="label">Facebook</span>
+                        </a>
+                        <li>
+                            <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
+                                <span class="label">Weibo</span>
+                            </a>
+                            <li>
+                                <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
+                                    <span class="label">LinkedIn</span>
+                                </a>
+                                <li>
+                                    <a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github">
+                                        <span class="label">GitHub</span>
+                                    </a>
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin">
+                                            <span class="label">LinkedIn</span>
+                                        </a>
+                </ul>
+                <ul class="copyright">
+                    <li>© Frankie Hao Yuan
+                        <li>Design: HTML5 UP</ul>
+            </div>
+        </footer>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
