--- a/me.html
+++ b/me.html
@@ -75,21 +75,22 @@
           </a>
           <div class="content inner">
             <header class="major">
-              <h3>I am a GEEK</h3>
+              <h3>I take PHOTOS</h3>
             </header>
             <p>I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and environment, I have
               unlimited enthusiasm for technology, especially for computer science.</br>
-              I graduated from Beijing Bayi School International Department, a place full of creativity and energetics. Seizing every opporturnity
+              I graduated from Beijing Bayi School International Department, a place full of creativity and energetics. Seizing every opportunity
               to step closer to my dream, in high school, a tech club reviewing new digital products was founded by me; I
-              also led a team to participate Diamond Challenge, a global business concept competition held by Uniersity of
-              Delaware.
+              also led a team to participate in Diamond Challenge, a global business concept competition held by University
+              of Delaware.
               </br>
-              Now, I am studying in Pre-Enginering at University of Illinois at Urbana-Champaign. There are much more chances to meet with
-              world-leading technology. Aiming to be a sucessful product manager in Artifical Intelligence field, I am highly
-              motivated to learn from relative academic resources and be involved in various campus actvities. </br>
-              I developed a messaging robot to response questions from incoming students automaticaly. With Special Interest Group for
-              Artificial Intelligence in Association for Computing Machinery, I learnt lots of AI concepts and was planning
-              to start a road sign recognition project. In addition, I had an internship as software testing engineer at
+              Now, I am studying in Pre-Engineering at the University of Illinois at Urbana-Champaign. There are much more chances to meet
+              with world-leading technology. Aiming to be a successful product manager in Artifical Intelligence field, I
+              am highly motivated to learn from relative academic resources and be involved in various campus activities.
+              </br>
+              I developed a messaging robot to response questions from incoming students automatically. With Special Interest Group for
+              Artificial Intelligence in Association for Computing Machinery, I learned lots of AI concepts and was planning
+              to start a road sign recognition project. In addition, I had an internship as a software testing engineer at
               HXT Semiconductor Technology in Summer 2018. </br>
               Please visit Linkedin Page to see my professional experience and resume.</br>
               <ul class="actions">
@@ -125,9 +126,9 @@
               <h3>I love this WORLD</h3>
             </header>
             <p>"Life is like not to bold adventure, then nothing."</br>
-              Yes, I am challenging myself all the time. Besides Computer Science, there are much more fun roles to be for this bored life.</br>
-              In high school, I was the stage manager of "Our Town" for Bulc Amard Drama Club; I was Art Editor and Design
-              Manager for Survive Magazine; I was English teacher at Immigrant Wenhua School...</br>
+              Yes, I am challenging myself all the time. Besides Computer Science, there are much more fun roles to be in this boring life.</br>
+              In high school, I was the stage manager of "Our Town" for Bulc Amard Drama Club; I was Art Editor and Design Manager for
+              Survive Magazine; I was an English teacher at Immigrant Wenhua School...</br>
               At University, even though I know nothing about art, I took Painting and World Music courses...</br>
               What's NEXT? Idk, but I am ready for the NEXT.
               <ul class="actions">
