--- a/peaband.html
+++ b/peaband.html
@@ -52,11 +52,11 @@
                         <img src="peaband/images/peaband.jpg" alt="">
                     </span>
                     <p>Peaband is a conceptual wearable device product created by Fred JingYu Zheng, Wendy WanQin Wen, Susan
-                        Yi Cao, and Frankie Hao Yuan in 2016. They are high school students at Beijing Bayi School International
+                        Yi Cao, and Frankie Hao Yuan in 2016. They were high school students at Beijing Bayi School International
                         Department(BYID), and this product is for Diamond Challenge, a business concept competition held
                         by University of Delaware. Helped by their advisor, Martin Thompson, these group of high school students
                         with enthusiasm were one of the three teams advanced into the semi-final via internet pitch. And
-                        they were invited to Delaware to participate the The Youth Entrepreneurship Summit (YES!).
+                        they were invited to Delaware to participate the Youth Entrepreneurship Summit (YES!).
                         <p>If you have any thought about this product, please contact me with email - frankie.yuan[at]yahoo.com
                             <a
                                 href="http://diamondchallenge.org/" target="_blank">
