--- a/hyphoto.html
+++ b/hyphoto.html
@@ -2,61 +2,119 @@
 <title>HYPhoto - Amateur Photography</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="assets/css/main.css"><noscript>
-<link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+<link rel="stylesheet" href="assets/css/main.css">
+<noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css">
+</noscript>
 <meta name="keywords" content="HYPhoto, Photography, Landscape, City view, Portrait">
 <meta name="description" content="HYPhoto - Landscape | City view | Portrait - Use Photos to Record Life">
+
 <body class="is-preload">
-<!-- Wrapper -->
-<div id="wrapper"><!-- Header -->
-<!-- Note: The "styleN" class below should match that of the banner element. -->
-<header id="header" class="alt style2"><a href="index.html" class="logo"><strong>Frankie</strong> <span>Hao Yuan</span></a>
-<nav><a href="#menu"></a></nav></header><!-- Menu -->
-<nav id="menu">
-<ul class="links">
-<li><a href="index.html">Home</a>
-<li><a href="tensorflow.html">Tensorflow Project</a>
-<li><a href="peaband.html">Conceptual Wearable Device</a>
-<li><a href="vpn/index.html">Vitrual Private Network</a>
-<li><a href="hyphoto.html">Amateur Photography</a>
-<li><a href="me.html">About Me</a></ul></nav><!-- Banner -->
-<!-- Note: The "styleN" class below should match that of the header element. -->
-<section id="banner" class="style2">
-<div class="inner"><span class="image"><img src="images/sakura.jpg" alt=""></span>
-<header class="major">
-<h1>HYPhoto</h1></header>
-<div class="content">
-<p>Amateur Photography</div></div></section>
-<section id="one">
-<div class="inner">
-<header class="major">
-<h1>Capture Life Moments</h1></header><!-- Content -->
-<div class="row"><!-- Break -->
-<div class="col-4 col-12-medium">
-<h3>Landscape</h3>
-<p>1<a href="#" class="button fit">View</a></div>
-<div class="col-4 col-12-medium">
-<h3>City View</h3>
-<p>2<a href="#" class="button fit">View</a></div>
-<div class="col-4 col-12-medium">
-<h3>Portrait</h3>
-<p>3<a href="#" class="button fit">View</a></div></div>
-<hr class="major"></div></section><!-- Footer -->
-<footer id="footer">
-<div class="inner">
-<ul class="icons">
-<li><a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
-<li><a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram"><span class="label">Weibo</span></a>
-<li><a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo"><span class="label">LinkedIn</span></a>
-<li><a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a>
-<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></ul>
-<ul class="copyright">
-<li>© Frankie Hao Yuan
-<li>Design: HTML5 UP</ul></div></footer></div><!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script> 
-<script src="assets/js/jquery.scrolly.min.js"></script> 
-<script src="assets/js/jquery.scrollex.min.js"></script> 
-<script src="assets/js/browser.min.js"></script> 
-<script src="assets/js/breakpoints.min.js"></script> 
-<script src="assets/js/util.js"></script> 
-<script src="assets/js/main.js"></script>
+    <!-- Wrapper -->
+    <div id="wrapper">
+        <!-- Header -->
+        <!-- Note: The "styleN" class below should match that of the banner element. -->
+        <header id="header" class="alt style2">
+            <a href="index.html" class="logo">
+                <strong>Frankie</strong>
+                <span>Hao Yuan</span>
+            </a>
+            <nav>
+                <a href="#menu"></a>
+            </nav>
+        </header>
+        <!-- Menu -->
+        <nav id="menu">
+            <ul class="links">
+                <li>
+                    <a href="index.html">Home</a>
+                    <li>
+                        <a href="tensorflow.html">Tensorflow Project</a>
+                        <li>
+                            <a href="peaband.html">Conceptual Wearable Device</a>
+                            <li>
+                                <a href="vpn/index.html">Vitrual Private Network</a>
+                                <li>
+                                    <a href="hyphoto.html">Amateur Photography</a>
+                                    <li>
+                                        <a href="me.html">About Me</a>
+            </ul>
+        </nav>
+        <!-- Banner -->
+        <!-- Note: The "styleN" class below should match that of the header element. -->
+        <section id="banner" class="style2">
+            <div class="inner">
+                <span class="image">
+                    <img src="images/sakura.jpg" alt="">
+                </span>
+                <header class="major">
+                    <h1>HYPhoto</h1>
+                </header>
+                <div class="content">
+                    <p>Capture Life Moments</div>
+            </div>
+        </section>
+        <section id="one">
+            <div class="inner">
+                <!-- Content -->
+                <div class="row">
+                    <!-- Break -->
+                    <div class="col-4 col-12-medium">
+                        <h3>Landscape</h3>
+                        <p>1
+                            <a href="#" class="button fit">View</a>
+                    </div>
+                    <div class="col-4 col-12-medium">
+                        <h3>City View</h3>
+                        <p>2
+                            <a href="#" class="button fit">View</a>
+                    </div>
+                    <div class="col-4 col-12-medium">
+                        <h3>Portrait</h3>
+                        <p>3
+                            <a href="#" class="button fit">View</a>
+                    </div>
+                </div>
+                <a href="https://tuchong.com/2661459" class="button primary fit">More on Tuchong.com</a>
+                <hr class="major">
+            </div>
+        </section>
+        <!-- Footer -->
+        <footer id="footer">
+            <div class="inner">
+                <ul class="icons">
+                    <li>
+                        <a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook">
+                            <span class="label">Facebook</span>
+                        </a>
+                        <li>
+                            <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
+                                <span class="label">Weibo</span>
+                            </a>
+                            <li>
+                                <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
+                                    <span class="label">LinkedIn</span>
+                                </a>
+                                <li>
+                                    <a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github">
+                                        <span class="label">GitHub</span>
+                                    </a>
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin">
+                                            <span class="label">LinkedIn</span>
+                                        </a>
+                </ul>
+                <ul class="copyright">
+                    <li>© Frankie Hao Yuan
+                        <li>Design: HTML5 UP</ul>
+            </div>
+        </footer>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
