--- a/hyphoto/assets/index.html
+++ b/hyphoto/assets/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--
-        Multiverse by HTML5 UP
-        html5up.net | @ajlkn
-        Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<title>Multiverse by HTML5 UP</title>
+<title>LandScape Selection - HYPhoto</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css"><noscript>
@@ -13,7 +8,7 @@
 <!-- Wrapper -->
 <div id="wrapper"><!-- Header -->
 <header id="header">
-<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+<h1><a href="index.html"><strong>HYPhoto</strong> LandScape Selection</a></h1>
 <nav>
 <ul>
 <li><a href="#footer" class="icon fa-info-circle">About</a></ul></nav></header><!-- Main -->
