--- a/hyphoto.html
+++ b/hyphoto.html
@@ -59,20 +59,20 @@
                 <!-- Content -->
                 <div class="row">
                     <!-- Break -->
+                <div class="col-4 col-12-medium">
+                    <h3>City View</h3>
+                    <p>
+                        <a href="/hyphoto/city-view.html" class="button fit">View</a>
+                </div>
                     <div class="col-4 col-12-medium">
                         <h3>Landscape</h3>
-                        <p>1
-                            <a href="#" class="button fit">View</a>
-                    </div>
-                    <div class="col-4 col-12-medium">
-                        <h3>City View</h3>
-                        <p>2
-                            <a href="#" class="button fit">View</a>
-                    </div>
+                        <p>
+                            <a href="/hyphoto/landscape.html" class="button fit">View</a>
+                        </div>
                     <div class="col-4 col-12-medium">
                         <h3>Portrait</h3>
-                        <p>3
-                            <a href="#" class="button fit">View</a>
+                        <p>
+                            <a href="/hyphoto/portrait.html" class="button fit">View</a>
                     </div>
                 </div>
                 <a href="https://tuchong.com/2661459" class="button primary fit">More on Tuchong.com</a>
